<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/label_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:text="@string/label_bill"
        android:textSize="28sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/lightGrey"/>

    <TextView
        android:id="@+id/label_tip_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_bill"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/label_bill"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/lightGrey"
        android:text="@string/label_tip_percent"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/amount_bill_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/label_bill"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/label_bill"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/darkBlue"
        android:ems="10"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/amount_tip_percent_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/amount_bill_hint"
        android:layout_alignBottom="@id/label_tip_percent"
        android:layout_toRightOf="@id/label_tip_percent"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/darkBlue"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/amount_tip_percent_hint"

        android:textSize="28sp" />

    <TextView
        android:id="@+id/label_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_tip_percent"
        android:layout_alignLeft="@id/label_tip_percent"
        android:layout_alignRight="@id/label_tip_percent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="22.5sp"
        android:text="Number of people"
        android:background="@color/lightGrey"/>

    <EditText
        android:id="@+id/amount_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_person"
        android:layout_alignRight="@id/amount_tip_percent_hint"
        android:layout_alignBottom="@id/label_person"
        android:inputType="number"
        android:textSize="25sp"
        android:gravity="center"
         />
    <TextView
        android:id="@+id/label_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/red_line"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/label_tip"
        android:textSize="28sp"
        android:background="@color/lightGrey"
        />

    <TextView
        android:id="@+id/amount_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_tip"
        android:layout_alignBottom="@+id/label_tip"
        android:layout_alignRight="@id/amount_bill_hint"
        android:background="@color/lightGreen"
        android:gravity="center"
        android:textSize="28sp"/>



    <TextView
        android:id="@+id/label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/label_tip"
        android:layout_alignRight="@+id/label_bill"
        android:layout_alignLeft="@+id/label_bill"
        android:text="@string/label_total"
        android:textSize="28sp"
        android:background="@color/lightGrey"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/amount_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_total"
        android:layout_alignBottom="@id/label_total"
        android:layout_alignRight="@id/amount_bill_hint"
        android:background="@color/lightGreen"
        android:gravity="center"
        android:textSize="28sp"
        />
    <!--<Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/amount_total"
        android:background="@color/DarkGreen"
        android:textSize="28sp"
        android:text="@string/button"
        android:onClick="calculate"/>-->
    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_person"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/amount_bill_hint"

        android:background="#FF00" />
    <TextView
        android:id="@+id/label_personOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_total"
        android:layout_alignLeft="@id/label_total"
        android:layout_alignRight="@id/label_tip_percent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="21.5sp"
        android:text="Total per Person"
        android:background="@color/lightGrey"/>

    <TextView
        android:id="@+id/amount_personOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/amount_total"
        android:layout_alignBottom="@id/label_personOutput"




        android:layout_toRightOf="@id/label_personOutput"
        android:background="@color/lightGreen"

        android:gravity="center"
        android:padding="12dp"
        android:textSize="21.5sp" />


</RelativeLayout>